# vpc-kanban

./: Cargo.toml  kanban.db
backend-go/: README.md  main.go
backend-go/db/: db.go
backend-go/jira/: jira.go
backend-go/models/: models.go
backend-python/: README.md  db.py  jira_client.py  main.py  models.py
frontend/: app.js  index.html  style.css
src/: db.rs  jira.rs  main.rs  models.rs
